[package]
name = "onception"
version = "0.0.0"
description = "An Option that can only be set to Some once"
license = "BSD-3-Clause"
repository = "https://github.com/fdschonborn/onception"
readme = "README.md"
categories = ["data-structures", "rust-patterns"]
keywords = ["option", "once", "once-option"]
edition = "2021"
