[package]
name = "once_cell_ext"
version = "0.0.0"
description = "Extension trait for OnceCell"
license = "BSD-3-Clause"
repository = "https://github.com/fdschonborn/once-cell-ext"
readme = "README.md"
categories = ["data-structures", "rust-patterns"]
keywords = ["option", "once", "once-option"]
edition = "2021"

[features]
# Disabled by default until `once_cell` stabilizes.
std = []

[dependencies]
once_cell = "1.9.0"
